--- a/backup/RozaanCV.css
+++ b/backup/RozaanCV.css
@@ -129,6 +129,22 @@ main {
 
 }
 
+@media screen and (max-width: 1066px){
+    .Name h1{
+        font-family: "Heebo", sans-serif;
+        padding-top: 100px;
+        color: white;
+        font-size: 50px;
+    }
+
+    .Mastery h1 {
+        font-family: "Heebo", sans-serif;
+        color: white;
+        font-size: 35px;
+    
+    }
+}
+
 .Desc {
     grid-row-start: 2;
     grid-column: 2 / 5;
